upgrade code refactor deprecated values fix jwt