@@ -1,31 +1,28 @@
-package com.sid.service;
+package com.sid.service.impl;
 
 import com.sid.entities.Image;
 import com.sid.entities.Item;
+import com.sid.exception.RestException;
 import com.sid.repositories.ItemRepository;
+import com.sid.service.ImageService;
+import com.sid.service.ItemService;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
+@RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
 
     private final ItemRepository itemRepository;
     private final ImageService imageService;
-
-    public ItemServiceImpl(ItemRepository itemRepository,
-                           ImageService imageService) {
-        this.itemRepository = itemRepository;
-        this.imageService = imageService;
-    }
 
     @Override
     public Page<Item> getItems(String category, Pageable pageable) {
@@ -42,14 +39,13 @@ public class ItemServiceImpl implements ItemService {
         List<String> brands = new ArrayList<>();
         itemRepository.findByCategoryEquals(category).forEach(item -> brands.add(item.getBrand()));
 
-        return brands.stream().distinct().sorted().collect(Collectors.toList());
+        return brands.stream().distinct().sorted().toList();
     }
 
     @Override
     public Item getItem(String code) {
         Item item = itemRepository.findItemByCodeEquals(code);
-        if (item == null)
-            throw new RuntimeException("This article doesn't exist!");
+        if (item == null) throw new RestException("This article doesn't exist!");
         return item;
     }
 
@@ -62,7 +58,7 @@ public class ItemServiceImpl implements ItemService {
     @Override
     public Item update(Item item) {
         if (!itemRepository.existsById(item.getIdItem()))
-            throw new RuntimeException("This article doesn't exist!");
+            throw new RestException("This article doesn't exist!");
 
         if (item.getIdItem() == null)
             item.setIdItem(itemRepository.findItemByCodeEquals(item.getCode()).getIdItem());
@@ -76,7 +72,7 @@ public class ItemServiceImpl implements ItemService {
     public void delete(String id) {
         Optional<Item> optionalItem = itemRepository.findById(id);
         if (optionalItem.isEmpty())
-            throw new RuntimeException("This article does not exist!");
+            throw new RestException("This article does not exist!");
 
         Item item = optionalItem.get();
         itemRepository.delete(item);
